Refactoring Opening Hours update() to improve and fix code.